--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
-group 'org.example'
-version '1.0-SNAPSHOT'
+group 'com.example'
+version '1.0.0'
 
 repositories {
     mavenCentral()
@@ -16,4 +17,18 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+jar {
+    manifest {
+        attributes "Main-Class": "com.example.car.simulation.Application"
+    }
+
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
+application {
+    mainClassName = 'com.example.car.simulation.Application'
 }
